# townhall-insights-mcp-demo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt
agent/tools/: __init__.py  insights_tool.py
insights_api/: Dockerfile  db.py  main.py  ml.py  models.py  pyproject.toml  requirements.txt
insights_api/ml/: __init__.py  anomaly.py  sentiment.py  topic_model.py  trends.py
insights_api/models/: __init__.py  schemas.py
insights_api/routers/: __init__.py  anomalies.py  clusters.py  sentiment.py  trends.py
mcp_server/: Dockerfile  pyproject.toml  server.py
mcp_server/tools/: __init__.py  anomalies.py  conversation_summary.py  refresh.py  sentiment_trends.py  topic_clusters.py
