[project]
name = "insights-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.16.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "statsmodels>=0.14.0",
    "supabase>=2.10.0",
    "uvicorn[standard]>=0.32.0",
    "vadersentiment>=3.3.2",
]
